constraint_setting(
    name = "container-image",
)

constraint_value(
    name = "ubuntu-act-22-04",
    constraint_setting = ":container-image",
)

REMOTE_EXEC_CONSTRAINTS = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
    "@rules_nixpkgs_core//constraints:support_nix",
    ":ubuntu-act-22-04",
]

platform(
    name = "ubuntu-act-22-04-platform",
    constraint_values = REMOTE_EXEC_CONSTRAINTS,
    exec_properties = {
        "OSFamily": "linux",
        "container-image": "docker://ghcr.io/catthehacker/ubuntu:act-22.04",
    },
)
