load("//bazel/go:go_test.bzl", "go_test")

go_test(
    name = "test_test",
    srcs = ["mount_integration_test.go"],
    # keep
    tags = ["manual"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//csi/cryptmapper",
            "//internal/cryptsetup",
            "@com_github_stretchr_testify//assert",
            "@com_github_stretchr_testify//require",
            "@org_uber_go_goleak//:goleak",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//csi/cryptmapper",
            "//internal/cryptsetup",
            "@com_github_stretchr_testify//assert",
            "@com_github_stretchr_testify//require",
            "@org_uber_go_goleak//:goleak",
        ],
        "//conditions:default": [],
    }),
)
