load("//bazel/go:go_test.bzl", "go_test")

go_test(
    name = "test_test",
    srcs = ["mount_integration_test.go"],
    gotags = ["integration"],
    # keep
    tags = ["integration"],
    # TODO(malt3): use libcryptsetup from nix (instead of Fedora) to make integration tests work on Linux with Bazel
    # tags = ["integration"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//csi/cryptmapper",
            "@com_github_stretchr_testify//assert",
            "@com_github_stretchr_testify//require",
            "@org_uber_go_goleak//:goleak",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//csi/cryptmapper",
            "@com_github_stretchr_testify//assert",
            "@com_github_stretchr_testify//require",
            "@org_uber_go_goleak//:goleak",
        ],
        "//conditions:default": [],
    }),
)
